--- a/angular-crud-app/src/app/components/user-list/user-list.component.html
+++ b/angular-crud-app/src/app/components/user-list/user-list.component.html
@@ -1,6 +1,8 @@
 <h2>User List</h2>
 
-<table mat-table [dataSource] = "users" class="mat-elevation-z8">
+<button mat-raised-button color="primary" (click)="openUserForm()">Add User</button>
+
+<table mat-table [dataSource]="users" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let user">{{ user.name }}</td>
@@ -14,11 +16,12 @@
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let user">
+            <button mat-button color="accent" (click)="openUserForm(user)">Edit</button>
             <button mat-button color="warn" (click)="deleteUser(user.id)">Delete</button>
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['name', 'email', 'actions']" ></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'email', 'actions']" ></tr>
+    <tr mat-header-row *matHeaderRowDef="['name', 'email', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name', 'email', 'actions']"></tr>
 
 </table>
