--- a/angular-crud-app/src/app/components/user-list/user-list.component.html
+++ b/angular-crud-app/src/app/components/user-list/user-list.component.html
@@ -1,27 +1,42 @@
-<h2>User List</h2>
-
-<button mat-raised-button color="primary" (click)="openUserForm()">Add User</button>
-
-<table mat-table [dataSource]="users" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let user">{{ user.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let user">
-            <button mat-button color="accent" (click)="openUserForm(user)">Edit</button>
-            <button mat-button color="warn" (click)="deleteUser(user.id)">Delete</button>
-        </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="['name', 'email', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'email', 'actions']"></tr>
-
-</table>
+<div class="container">
+    <mat-card class="mat-elevation-z8">
+      <mat-card-title>User Management</mat-card-title>
+      <mat-card-subtitle>Manage user records efficiently</mat-card-subtitle>
+      <button mat-raised-button color="primary" class="add-button" (click)="openUserForm()">
+        ➕ Add User
+      </button>
+  
+      <table mat-table [dataSource]="users" class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let user"> {{ user.id }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let user"> {{ user.name }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let user" class="actions">
+            <button mat-icon-button color="accent" (click)="openUserForm(user)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="deleteUser(user.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+  </div>
+  
